--- a/automation/robb-smarrt/ROB_200-007-0/deconz.yaml
+++ b/automation/robb-smarrt/ROB_200-007-0/deconz.yaml
@@ -111,7 +111,7 @@ trigger:
   
 action:
   - variables:
-      button: '{{ trigger.event.data.event / 1000 | int }}'
+      button: '{{ (trigger.event.data.event / 1000) | int }}'
       action: '{{ trigger.event.data.event % 10 }}'
   - choose:
       - conditions:
